--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -328,70 +328,70 @@ body {
   color: #fff;
 }
 
-footer {
+/* footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-}
+} */
 
-footer .col {
+/* footer .col {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin-bottom: 10px;
-}
+} */
 
-footer .logo {
+/* footer .logo {
   margin-bottom: 30px;
-}
+} */
 
-footer h4 {
+/* footer h4 {
   font-size: 14px;
   margin-bottom: 10px;
   margin-left: 10px;
-}
+} */
 
-footer p {
+/* footer p {
   font-size: 13px;
   margin: 0 0 8px 0;
-}
+} */
 
-footer a {
+/* footer a {
   font-size: 13px;
   text-decoration: none;
   color: #222;
   margin: 10px;
-}
+} */
 
-footer .follow {
+/* footer .follow {
   margin-top: 20px;
-}
+} */
 
-footer .follow i {
+/* footer .follow i {
   color: #465b52;
   padding-right: 4px;
   cursor: pointer;
-}
+} */
 
-footer .install .row img {
+/* footer .install .row img {
   border: 1px solid #088178;
   border-radius: 6px;
-}
+} */
 
-footer .install img {
+/* footer .install img {
   margin: 10px 0 15px 0;
 }
 
 footer .follow i:hover,
 footer a:hover {
   color: #088178;
-}
+} */
 
-footer .copyright {
+/* footer .copyright {
   margin-top: 70px;
   width: 100%;
   text-align: center;
-}
+} */
 
 /* S H O P  P A G E */
 #page-header {
