--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,52 +1,52 @@
-@font-face {
+/* @font-face {
   font-family: Spartan;
   src: url(font/LeagueSpartan-VariableFont_wght.ttf);
-}
+} */
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Spartan", sans-serif;
-}
+} */
 
-h1 {
+/* h1 {
   font-size: 50px;
   line-height: 64px;
   color: #222;
-}
+} */
 
-h2 {
+/* h2 {
   font-size: 46px;
   line-height: 54px;
   color: #222;
-}
+} */
 
-h4 {
+/* h4 {
   font-size: 20px;
   color: #222;
-}
+} */
 
-h7 {
+/* h7 {
   font-weight: 700;
   font-size: 12px;
-}
+} */
 
-p {
+/* p {
   font-size: 16px;
   color: #465b52;
   margin: 15px 0 20px 0;
-}
+} */
 
-.section-p1 {
+/* .section-p1 {
   padding: 40px 80px;
-}
+} */
 
-.section-m1 {
-  margin: 40px 0;
-}
+/* .section-m1 {
+  margin: 400px 0;
+} */
 
-button.normal {
+/* button.normal {
   font-size: 14px;
   font-weight: 600;
   padding: 15px 30px;
@@ -57,11 +57,11 @@ button.normal {
   border: none;
   outline: none;
   transition: 0.2s;
-}
+} */
 
-body {
+/* body {
   width: 100%;
-}
+} */
 
 /* H E A D E R */
 
