--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -132,7 +132,7 @@
 } */
 
 /* H O M E   P A G E*/
-#hero {
+/* #hero {
   background-image: url("../img/hero4.png");
   height: 90vh;
   width: 100%;
@@ -143,17 +143,17 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-}
+} */
 
-#hero h4 {
+/* #hero h4 {
   padding-bottom: 10px;
-}
+} */
 
-#hero h1 {
+/* #hero h1 {
   color: #088178;
-}
+} */
 
-#hero button {
+/* #hero button {
   background-image: url("../img/button.png");
   background-color: transparent;
   color: #088178;
@@ -164,16 +164,16 @@
   font-weight: 700;
   font-size: 20px;
   text-decoration: none;
-}
+} */
 
-#feature {
+/* #feature {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-}
+} */
 
-#feature .fe-box {
+/* #feature .fe-box {
   width: 180px;
   text-align: center;
   padding: 25px 15px;
@@ -199,9 +199,9 @@
   border-radius: 4px;
   color: #088178;
   background-color: #fddde4;
-}
+} */
 
-#feature .fe-box:nth-child(2) h6 {
+/* #feature .fe-box:nth-child(2) h6 {
   background-color: #cdebbc;
 }
 
@@ -219,20 +219,20 @@
 
 #feature .fe-box:nth-child(6) h6 {
   background-color: #fff2e5;
-}
+} */
 
-#product1 {
+/* #product1 {
   text-align: center;
-}
+} */
 
-#product1 .pro-container {
+/* #product1 .pro-container {
   display: flex;
   justify-content: space-between;
   padding-top: 20px;
   flex-wrap: wrap;
-}
+} */
 
-#product1 .pro {
+/* #product1 .pro {
   width: 23%;
   min-width: 250px;
   padding: 10px 12px;
@@ -243,46 +243,46 @@
   margin: 15px 0;
   transition: 0.2s ease;
   position: relative;
-}
+} */
 
-#product1 .pro:hover {
+/* #product1 .pro:hover {
   box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
-}
+} */
 
-#product1 .pro img {
+/* #product1 .pro img {
   width: 100%;
   border-radius: 20px;
-}
+} */
 
-#product1 .pro .des {
+/* #product1 .pro .des {
   text-align: start;
   padding: 10px 0;
-}
+} */
 
-#product1 .pro .des span {
+/* #product1 .pro .des span {
   color: #606063;
   font-size: 12px;
-}
+} */
 
-#product1 .pro .des h5 {
+/* #product1 .pro .des h5 {
   padding-top: 7px;
   color: #1a1a1a;
-  font-size: 14px;
-}
+  font-size: 50px;
+} */
 
-#product1 .pro .des i {
+/* #product1 .pro .des i {
   font-size: 12px;
   color: rgb(243, 181, 25);
-}
+} */
 
-#product1 .pro .des h4 {
+/* #product1 .pro .des h4 {
   padding-top: 7px;
   font-size: 15px;
   font-weight: 700;
   color: #088178;
-}
+} */
 
-#product1 .pro .cart {
+/* #product1 .pro .cart {
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -294,9 +294,9 @@
   position: absolute;
   bottom: 20px;
   right: 10px;
-}
+} */
 
-#banner {
+/* #banner {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -306,27 +306,27 @@
   height: 40vh;
   background-size: cover;
   background-position: center;
-}
+} */
 
-#banner h4 {
+/* #banner h4 {
   color: #fff;
   font-size: 16px;
-}
+} */
 
-#banner h2 {
+/* #banner h2 {
   color: #fff;
   font-size: 30px;
   padding: 10px 0;
-}
+} */
 
-#banner h2 span {
+/* #banner h2 span {
   color: #ef3636;
-}
+} */
 
-#banner button:hover {
+/* #banner button:hover {
   background: #088178;
   color: #fff;
-}
+} */
 
 /* footer {
   display: flex;
@@ -715,24 +715,24 @@ form a {
   #lg-bag {
     display: none;
   }
-  #hero {
+  /* #hero {
     height: 70vh;
     padding: 0 80px;
     background-position: top 30% right 30%;
-  }
-  #feature {
+  } */
+  /* #feature {
     justify-content: center;
-  }
-  #feature .fe-box {
+  } */
+  /* #feature .fe-box {
     margin: 15px 15px;
-  }
-  #product1 .pro-container {
+  } */
+  /* #product1 .pro-container {
     justify-content: center;
-  }
-  #product1 .pro {
+  } */
+  /* #product1 .pro {
     margin: 15px;
-  }
-  #banner {
+  } */
+  /* #banner {
     height: 20vh;
   }
   #banner h4 {
@@ -748,13 +748,13 @@ form a {
 
   #banner h2 span {
     color: #ef3636;
-  }
+  } */
 
-  #banner button:hover {
+  /* #banner button:hover {
     margin-bottom: -20px;
     background: #088178;
     color: #fff;
-  }
+  } */
 
   /* LOGIN */
   .form-container {
@@ -772,7 +772,7 @@ form a {
 
 @media (max-width: 414px) {
   /* BANNER PRODUCT*/
-  #banner {
+  /* #banner {
     height: 20vh;
   }
   #banner h4 {
@@ -796,7 +796,7 @@ form a {
     margin-bottom: 50px;
     background: #088178;
     color: #fff;
-  }
+  } */
   /* SINGLE PRODUCT */
   #prodetails {
     display: flex;
