--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -595,10 +595,10 @@ footer a:hover {
 
 /* LOGIN */
 
-.account-page {
+/* .account-page {
   padding: 50px 0;
-}
-.form-container {
+} */
+/* .form-container {
   margin-left: 150px;
   width: 300px;
   height: 400px;
@@ -608,18 +608,18 @@ footer a:hover {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.06);
   overflow: hidden;
   border-radius: 20px;
-}
+} */
 
-.form-container span {
+/* .form-container span {
   font-weight: bold;
   padding: 0 10px;
   color: #555;
   cursor: pointer;
   width: 100px;
   display: inline-block;
-}
+} */
 
-.form-btn {
+/* .form-btn {
   display: inline-block;
 }
 .form-container form {
@@ -628,36 +628,37 @@ footer a:hover {
   position: absolute;
   top: 130px;
   transition: transform 1s;
-}
-form input {
+} */
+/* form input {
   width: 100%;
   height: 30px;
   margin: 10px 0;
   padding: 0 10px;
   border: 1px solid #ccc;
-}
+} */
 
-form .btn {
+/* form .btn {
   width: 100%;
   border: none;
   cursor: pointer;
   margin: 10px;
 }
+
 form .btn:focus {
   outline: none;
-}
+} */
 
-#LoginForm {
+/* #LoginForm {
   left: -300px;
 }
 #RegForm {
   left: 0;
-}
+} */
 
-form a {
+/* form a {
   font-size: 12px;
-}
-#indicator {
+} */
+/* #indicator {
   width: 100px;
   border: none;
   background: #088178;
@@ -665,7 +666,7 @@ form a {
   margin-top: 8px;
   transform: translateX(100px);
   transition: transform 1s;
-}
+} */
 
 /* M E D I A   Q U E R Y */
 @media (max-width: 799px) {
@@ -757,7 +758,7 @@ form a {
   } */
 
   /* LOGIN */
-  .form-container {
+  /* .form-container {
     margin-left: 0px;
     width: 300px;
     height: 400px;
@@ -768,11 +769,11 @@ form a {
     overflow: hidden;
     border-radius: 20px;
   }
-}
+} */
 
-@media (max-width: 414px) {
-  /* BANNER PRODUCT*/
-  /* #banner {
+  @media (max-width: 414px) {
+    /* BANNER PRODUCT*/
+    /* #banner {
     height: 20vh;
   }
   #banner h4 {
@@ -797,89 +798,90 @@ form a {
     background: #088178;
     color: #fff;
   } */
-  /* SINGLE PRODUCT */
-  #prodetails {
-    display: flex;
-    flex-direction: column;
-  }
-  #prodetails .single-pro-image {
-    width: 100%;
-    margin-right: 0px;
-  }
+    /* SINGLE PRODUCT */
+    #prodetails {
+      display: flex;
+      flex-direction: column;
+    }
+    #prodetails .single-pro-image {
+      width: 100%;
+      margin-right: 0px;
+    }
 
-  #prodetails .single-pro-details {
-    width: 100%;
-  }
+    #prodetails .single-pro-details {
+      width: 100%;
+    }
 
-  /* CARD PAGE */
-  #cart table {
-    width: 100%;
-    border-collapse: collapse;
-    table-layout: fixed;
-    white-space: nowrap;
-  }
-  #cart {
-    overflow-x: auto;
-  }
-  #cart table img {
-    width: 70px;
-  }
+    /* CARD PAGE */
+    #cart table {
+      width: 100%;
+      border-collapse: collapse;
+      table-layout: fixed;
+      white-space: nowrap;
+    }
+    #cart {
+      overflow-x: auto;
+    }
+    #cart table img {
+      width: 70px;
+    }
 
-  #cart table td:nth-child(1) {
-    width: 80px;
-    text-align: center;
-  }
-  #cart table td:nth-child(2) {
-    width: 150px;
-    text-align: center;
-  }
-  #cart table td:nth-child(3) {
-    width: 250px;
-    text-align: center;
-  }
-  #cart table td:nth-child(4) #cart table td:nth-child(5) #cart table td:nth-child(6) {
-    width: 150px;
-    text-align: center;
-  }
+    #cart table td:nth-child(1) {
+      width: 80px;
+      text-align: center;
+    }
+    #cart table td:nth-child(2) {
+      width: 150px;
+      text-align: center;
+    }
+    #cart table td:nth-child(3) {
+      width: 250px;
+      text-align: center;
+    }
+    #cart table td:nth-child(4) #cart table td:nth-child(5) #cart table td:nth-child(6) {
+      width: 150px;
+      text-align: center;
+    }
 
-  #cart table td:nth-child(5) input {
-    width: 50px;
-    text-align: center;
-    line-height: 20px;
-    padding: 10px, 5px, 10px, 15px;
-  }
+    #cart table td:nth-child(5) input {
+      width: 50px;
+      text-align: center;
+      line-height: 20px;
+      padding: 10px, 5px, 10px, 15px;
+    }
 
-  #cart table thead {
-    border: 1px solid #e2e9e1;
-    line-height: 50px;
-    border-left: none;
-    border-right: none;
-  }
+    #cart table thead {
+      border: 1px solid #e2e9e1;
+      line-height: 50px;
+      border-left: none;
+      border-right: none;
+    }
 
-  #cart table thead td {
-    font-weight: 100;
-    text-transform: uppercase;
-    font-size: 13px;
-    padding: 18px, 0;
-  }
+    #cart table thead td {
+      font-weight: 100;
+      text-transform: uppercase;
+      font-size: 13px;
+      padding: 18px, 0;
+    }
 
-  #cart table tbody tr td {
-    padding-top: 15px;
-  }
+    #cart table tbody tr td {
+      padding-top: 15px;
+    }
 
-  #cart-add {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  #card-add {
-    flex-direction: column;
-  }
-  #coupon {
-    width: 100%;
-  }
-  #subtotal {
-    width: 100%;
-    padding: 20px;
+    #cart-add {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    #card-add {
+      flex-direction: column;
+    }
+    #coupon {
+      width: 100%;
+    }
+    #subtotal {
+      width: 100%;
+      padding: 20px;
+    }
   }
 }
