--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -561,38 +561,39 @@ footer a:hover {
 /* #coupon h3 {
   padding-bottom: 15px;
 } */
-#coupon input {
+/* #coupon input {
   padding: 10px 20px;
   outline: none;
   width: 60%;
   margin-right: 10px;
   border: 1px solid #e2e9e1;
-}
-#coupon button,
+} */
+
+/* #coupon button,
 #subtotal button {
   background-color: #088178;
   color: #fff;
   padding: 12px, 20px;
-}
+} */
 
-#subtotal {
+/* #subtotal {
   width: 50%;
   margin-bottom: 30px;
   border: 1px solid #e2e9e1;
   padding: 30px;
-}
-#subtotal table {
+} */
+/* #subtotal table {
   border-collapse: collapse;
   width: 100%;
   margin-bottom: 20px;
-}
+} */
 
-#subtotal table td {
+/* #subtotal table td {
   width: 50px;
   border: 1px solid #e2e9e1;
   padding: 10px;
   font-size: 13px;
-}
+} */
 
 /* LOGIN */
 
@@ -814,20 +815,20 @@ form .btn:focus {
     }
 
     /* CARD PAGE */
-    #cart table {
+    /* #cart table {
       width: 100%;
       border-collapse: collapse;
       table-layout: fixed;
       white-space: nowrap;
-    }
-    #cart {
+    } */
+    /* #cart {
       overflow-x: auto;
-    }
-    #cart table img {
+    } */
+    /* #cart table img {
       width: 70px;
-    }
+    } */
 
-    #cart table td:nth-child(1) {
+    /* #cart table td:nth-child(1) {
       width: 80px;
       text-align: center;
     }
@@ -849,40 +850,39 @@ form .btn:focus {
       text-align: center;
       line-height: 20px;
       padding: 10px, 5px, 10px, 15px;
-    }
+    } */
 
-    #cart table thead {
+    /* #cart table thead {
       border: 1px solid #e2e9e1;
       line-height: 50px;
       border-left: none;
       border-right: none;
-    }
+    } */
 
-    #cart table thead td {
+    /* #cart table thead td {
       font-weight: 100;
       text-transform: uppercase;
       font-size: 13px;
       padding: 18px, 0;
-    }
+    } */
 
-    #cart table tbody tr td {
+    /* #cart table tbody tr td {
       padding-top: 15px;
-    }
+    } */
 
-    #cart-add {
+    /* #cart-add {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
     }
     #card-add {
       flex-direction: column;
-    }
-    #coupon {
+    } */
+    /* #coupon {
       width: 100%;
     }
     #subtotal {
       width: 100%;
-      padding: 20px;
-    }
+      padding: 20px; */
   }
 }
