--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -412,7 +412,8 @@ footer a:hover {
 } */
 
 /* PRODUK */
-#pagination {
+
+/* #pagination {
   text-align: center;
 }
 
@@ -428,7 +429,7 @@ footer a:hover {
 #pagination a i {
   font-size: 16px;
   font-weight: 600;
-}
+} */
 
 /* P R O D U C T   D E T A I L S */
 
