--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -433,17 +433,17 @@ footer a:hover {
 
 /* P R O D U C T   D E T A I L S */
 
-#prodetails {
+/* #prodetails {
   display: flex;
   margin-top: 20px;
-}
-
+} */
+/* 
 #prodetails .single-pro-image {
   width: 40%;
   margin-right: 50px;
-}
+} */
 
-.small-img-group {
+/* .small-img-group {
   display: flex;
   justify-content: space-between;
 }
@@ -451,47 +451,47 @@ footer a:hover {
 .small-img-col {
   flex-basis: 24%;
   cursor: pointer;
-}
+} */
 
-#prodetails .single-pro-details {
+/* #prodetails .single-pro-details {
   width: 50%;
   padding-top: 30px;
-}
+} */
 
-#prodetails .single-pro-details h4 {
+/* #prodetails .single-pro-details h4 {
   padding: 40px 0 20px 0;
-}
+} */
 
-#prodetails .single-pro-details h2 {
+/* #prodetails .single-pro-details h2 {
   font-size: 26px;
-}
+} */
 
-#prodetails .single-pro-details select {
+/* #prodetails .single-pro-details select {
   display: block;
   padding: 5px 10px;
   margin-bottom: 10px;
-}
+} */
 
-#prodetails .single-pro-details input {
+/* #prodetails .single-pro-details input {
   width: 50px;
   height: 47px;
   padding-left: 10px;
   font-size: 16px;
   margin-right: 10px;
-}
+} */
 
-#prodetails .single-pro-details input:focus {
+/* #prodetails .single-pro-details input:focus {
   outline: none;
-}
+} */
 
-#prodetails .single-pro-details button {
+/* #prodetails .single-pro-details button {
   background-color: #088178;
   color: #fff;
-}
+} */
 
-#prodetails .single-pro-details span {
+/* #prodetails .single-pro-details span {
   line-height: 25px;
-}
+} */
 
 /* C A R T */
 /* #cart table {
